--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Mauricio Urraco
 description: Jekyll Theme Minimal Resume
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:5500/" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+baseurl: "/rfalopes" # the subpath of your site, e.g. /blog
+url: "https://rfa-lopes.github.io" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Mauricio Urraco
