--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Mauricio Urraco
-description: Jekyll Theme Minimal Resume
+title: Rodrigo Lopes
+description: Resume
 baseurl: "/rfalopes" # the subpath of your site, e.g. /blog
 url: "https://rfa-lopes.github.io" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I\'m a nomad Software Engineer, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in the <b>crypto-world</b> working for Radix, a London based startup trying to create the next massive scalable DLT. I'm one of the two guys behind all the JS related stuff.
+username: Rodrigo Lopes
+user_description: Computer Engineering student at the FCT@UNL, currently in my final year of master's degree
 user_title: Software Engineer
-email: mauriurraco@gmail.com
+email: rfa.lopess@gmail.com
 # twitter_username: lorem_ipsum
-# github_username:  lorem_ipsum
+github_username:  rfa-lopes
 # gplus_username:  lorem_ipsum
 
 exclude: ["package.json", "src", "node_modules"]
