--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://rfa-lopes.github.io" # the base hostname & protocol for your site 
 # User settings
 username: Rodrigo Lopes
 user_description: Computer Engineering student at the FCT@UNL, currently in my final year of master's degree
-user_title: Software Engineer
+user_title: Computer Engineering student at the FCT@UNL, currently in my final year of master's degree #Software Engineer
 email: rfa.lopess@gmail.com
 # twitter_username: lorem_ipsum
 github_username: rfa-lopes
