NOVA School name update

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://rfa-lopes.github.io" # the base hostname & protocol for your site 
 # User settings
 username: Rodrigo Lopes
 user_description: Resume
-user_title: Computer Science Student at FCT@UNL, in final year of master's degree #Software Engineer
+user_title: Computer Science Student at NOVA School of Science and Technology | FCT NOVA #Software Engineer
 email: rfa.lopess@gmail.com
 # twitter_username: lorem_ipsum
 github_username: rfa-lopes
