--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ url: "https://rfa-lopes.github.io" # the base hostname & protocol for your site 
 
 # User settings
 username: Rodrigo Lopes
-user_description: Resume
-
 user_title: Software Engineer | Founder HOCKEYFY
+user_description: test test test  
+
 email: rfa.lopess@gmail.com
 
 user.instagram: rfa.lopes
